Fixes z-index issue where .toolContent overlaps object controls in inline editing mode.

--- a/tool-ui/src/main/webapp/style/inlineeditor.less
+++ b/tool-ui/src/main/webapp/style/inlineeditor.less
@@ -34,6 +34,7 @@
     &.inlineEditorControls-main {
         left: 0;
         top: 0;
+        z-index: 1;
     }
 
     &.inlineEditorControls-main a:hover,
